<resources>
    <string name="app_name">Android Schedule</string>
    <string name="logo">logo</string>
    <string name="appName">Agendalecimento</string>
    <string name="login_txt">Entrar</string>
    <string name="password_hint">Senha</string>
    <string name="email_hint">E-mail</string>
    <string name="hyphen">-</string>
    <string name="see_times">Ver horários</string>
    <string name="schedule">Agendar</string>
    <string name="logout">Logout</string>
    <string name="schedule_jobs">Agendar</string>
</resources>
